vlib/v/checker/tests/enum_field_name_err.vv
enum Color {
    Green
    yellow
}
fn main(){
	println('hello')
}
